--- a/tic-tac-toe/styles.css
+++ b/tic-tac-toe/styles.css
@@ -11,6 +11,10 @@
 body {
   background-color: #FF78F0;
   padding: 4rem;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 h1 {
